<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="RtlHardcoded"
    tools:targetApi="o"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0" >

    <FrameLayout
        android:layout_width="597px"
        android:layout_height="749px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        tools:ignore="PxUsage,UselessParent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/test_girl"
            tools:ignore="ContentDescription" />
        <com.alperez.widget.customlayout.RoundedCornersDecorationView android:id="@+id/corner_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cornerRadius="48dp"
            app:fillColor="#E0E0E0"/>
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:stretchColumns="1">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center_vertical">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="#222222"
                android:text="@string/seek_all_corners" />
            <SeekBar android:id="@+id/seek_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="120"
                android:progress="48"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center_vertical">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="#222222"
                android:text="@string/seek_top_left"/>
            <SeekBar android:id="@+id/seek_top_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="120"
                android:progress="48" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center_vertical">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="#222222"
                android:text="@string/seek_top_right"/>
            <SeekBar android:id="@+id/seek_top_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="120"
                android:progress="48"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center_vertical">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="#222222"
                android:text="@string/seek_bot_right"/>
            <SeekBar android:id="@+id/seek_bot_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="120"
                android:progress="48"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center_vertical">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="#222222"
                android:text="@string/seek_bot_left"/>
            <SeekBar android:id="@+id/seek_bot_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="120"
                android:progress="48"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="36dp"
            android:paddingBottom="8dp"
            android:gravity="center_vertical">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="#222222"
                android:text="@string/seek_fill_color"/>
            <SeekBar android:id="@+id/seek_fill_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="160"
                android:max="224"
                android:progress="224"/>
        </TableRow>

    </TableLayout>

</LinearLayout>